# darkeye

./: .gitignore  404.html  AGENTS.md  AV数据库概念ERD.excalidraw  Jvedio2NFO  LICENSE  README.ja.md  README.md  README.zh-TW.md  app_context.py  config.py  index.html  main.py  main.spec  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sqlite2nfo - new.py  updater.py  软件架构.excalidraw
.cursor/plans/: force_graph_c++_port_60b2a98c.plan.md  forceview_opengl_display_layer_18ac1015.plan.md  自研工作区窗格_demo_3cb46386.plan.md
.cursor/rules/: python-code-style.mdc
ActressWorkTimeline-rewrite/: index.html
CHANGELOG/: index.html
CODE_OF_CONDUCT/: index.html
PRD/: index.html
SCHEMA/: index.html
api/: index.html
architecture/: index.html
architecture-refactor-proposal/: index.html
av/: index.html
bug/: index.html
controller/: GlobalSignalBus.py  MessageService.py  ShortcutBindings.py  ShortcutRegistry.py  StatusManager.py  TaskRegistry.py  __init__.py  app_context.py  global_signal_bus.py  message_service.py  shortcut_bindings.py
core/: __init__.py  updater.py
core/crawler/: CrawlerManager.py  README.md  SearchActressInfo.py  SearchAvdanyuwiki.py  Worker.py  __init__.py  actress.py  avdanyuwiki.py  basic.py  cover_download.py  crawler_manager.py  crawler_relays.py  crawler_task.py  download.py  fanza.py  javdb.py  javlib.py  javtxt.py  jump.py  merge_service.py  minnanoav.py  missav.py  sequential_download.py  top_actresses.py  work_persistence.py  worker.py
core/database/: backup_service.py  backup_utils.py  connection.py  db_queue.py  db_utils.py  delete.py  init.py  insert.py  migrations.py  query.py  update.py  webdav_backup_client.py  webdav_credential_store.py
core/dvd/: Dvd.qml  DvdShelfView.py  __init__.py  demo_dvd.py  dvd_scene.qml  dvd_shelf_view.py
core/graph/: ForceDirectedViewWidget.py  ForceViewSettingsPanel.py  ImageOverlayWidget.py  README.md  __init__.py  graph.py  (+9 more)
cpp_bindings/color_wheel/: CMakeLists.txt  MyCustomWidget.cpp  MyCustomWidget.h  PyColorWheel.pyd  PyColorWheel.pyi  bindings.h  bindings.xml  build.ps1  test_main.py
cpp_bindings/color_wheel/src/: main.cpp
cpp_bindings/forced_direct_view/: CMakeLists.txt  MSDF_TEXT_PLAN.md  PyForceView.pyd  PyForceView.pyi  README.md  architecture.md  bindings.h  bindings.xml  build.ps1  mtest_main.py  test_main.py
cpp_bindings/forced_direct_view/include/: ForceViewOpenGL.h  Forces.h  GLShaderUtils.h  GraphRenderer.h  MainWindow.h  MsdfFontAtlas.h  MsdfTextRenderer.h  MyCustomWidget.h  PhysicsState.h  QuadTree.h  Simulation.h
cpp_bindings/forced_direct_view/src/: ForceViewOpenGL.cpp  ForceViewOpenGL_Geometry.cpp  ForceViewOpenGL_Input.cpp  ForceViewOpenGL_Runtime.cpp  ForceViewOpenGL_Simulation.cpp  ForceViewOpenGL_Text.cpp  Forces.cpp  GraphRenderer.cpp  MainWindow.cpp  MsdfFontAtlas.cpp  MsdfTextRenderer.cpp  MyCustomWidget.cpp  QuadTree.cpp  Simulation.cpp  main.cpp  test_main.cpp
darkeye_ui/: __init__.py  _logging.py  demo.py  doc.md  组件库修改意见.md
data-collect/: index.html
data-layer/: index.html
db-design/: index.html
design/: __init__.py  demo.py  icon.py  tokens.py
develop/: index.html
develop_old/: index.html
development/: index.html
docs/: ActressWorkTimeline-rewrite.md  CHANGELOG.md  CODE_OF_CONDUCT.md  PRD.md  SCHEMA.md  acchitecture.md  architecture-refactor-proposal.md  architecture.md  av.md  bug.md  data-layer.md  develop.md  develop_old.md  development.md  faq.md  fix.md  force-graph-render-sim.md  future.md  git-worktree-split.md  graph修改意见.md  index.md  note.md  security.md  settings.md  usage.md  write_ops_signal_mapping.md  修改意见.md  修改方向.md  力导向图架构.md  转写Cpp.md  软件架构.excalidraw
exp/: FramelessWidget.py  VerticalLineEdit.py  frameless_widget.py  vertical_line_edit.py
extensions/: javjhs.txt  new.md
faq/: index.html
fix/: index.html
force-graph-render-sim/: index.html
future/: index.html
git-worktree-split/: index.html
graph修改意见/: index.html
junk/: ColorPickerOKLCH.py  ForceGraphView.py  ForceView.cpp  ForceView.h  NodeLayer.cpp  NodeLayer.h  README.md  ShelfItemWidget.py  ShelfVirtualizedView.py  Sidebar.py  StatusBarNotification.py  TagSelector4.py  TagSelector6.py  TaskService.py  main.qss  simulation_process_main.py  simulation_worker.py
manual_tests/: card_flow_demo.py  frameless.py  test_3widget.py  test_actress_api.py  test_collapsibleSection.py  test_dock.py  test_find_path.py  test_jianguoyun_webdav.py  test_markdown.py  test_markdown_jump.py  test_memroy.py  test_min_memery.py  test_model.py  test_nsfw.py  test_radarchartwidget.py  test_sn.csv  test_stacked_widget.py  test_switchablewidget.py  test_switchheap_buttonlist.py  test_top_actresses_api.py  test_vertical_lineedit.py  test_vflowlayout.py  test_waterfall_scrollarea.py  test_work_merge_api.py
note/: index.html
recommendation/: index.html
scripts/: banbeng.py  build-nuitka.ps1  build-nuitka.py  build-nuitka_debug.ps1  build-nuitka_release.ps1  build-pyinstaller.ps1  clocCode.ps1  cloc_by_file.py  develop_pre.ps1  export_actors_cn_jp.py  jvedio2nfo.py  jvideo2nfo.py  make_standard_data.py  pack..py  pack.py  pack_avwiki.py  run_spine_demo.py
search/: search_index.json
security/: index.html
server/: __init__.py  app.py  bridge.py  launcher.py
settings/: index.html
styles/: main.qss  mymain.qss
tests/: conftest.py  test_avwiki_updater.py  test_backup.py  test_color.py  test_darkeye_ui_components_public_api.py  test_darkeye_ui_public_api.py  test_graph_filter.py  test_launcher.py  test_mdcz_movie_nfo_import.py  test_merge_service.py  test_serial_number_normalize.py  test_text_parser.py  test_translation_engine.py  test_updater.py  test_valid_serialnumber.py  test_work_completeness.py
ui/: main_window.py
ui-design/: index.html
update/: latest.json
usage/: index.html
utils/: __init__.py  avwiki_updater.py  color.py  image.py  log_config.py  profiler.py  reveal_in_file_manager.py  serial_number.py  updater.py  utils.py
web/: README.md  index.html
write_ops_signal_mapping/: index.html
修改意见/: index.html
力导向图架构/: index.html
转写Cpp/: index.html
(+334 files in other folders)
